deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-metrics-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: github-metrics-service
  template:
    metadata:
      labels:
        app: github-metrics-service
    spec:
      containers:
        - name: github-metrics-service
          image: developeriq.azurecr.io/github-metrics-service:IMAGE_TAG
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: github-metrics-service
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: github-metrics-service
